<resources>
    <string name="app_name">PainDiary</string>
    <string name="text_title_signin">Find Out UV Index Today!</string>
    <string name="enter_email">Email address</string>
    <string name="enter_password">Password</string>
    <string name="check_remember_me">Remember me</string>
    <string name="button_forget_password">Forget password</string>
    <string name="button_signin">Get Started!</string>
    <string name="text_msg_create_account">Don\'t have an account</string>
    <string name="button_create_account">Create one</string>
    <string name="text_title_signup">SIGNUP</string>
    <string name="enter_full_name">Name</string>
    <string name="enter_create_password">Create new password</string>
    <string name="enter_reenter_password">Re-enter password</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_birth_date">Birth date</string>
    <string name="button_next">NEXT</string>
    <string name="button_back">BACK</string>
    <string name="button_have_account">I already have an account</string>
    <string name="button_signup">SignUp</string>

    <string name="mapbox_public_access_token">pk.eyJ1Ijoidml2ZWtjaGF1ZGhhcmkxOTE0IiwiYSI6ImNrb2pyY29pcjAyengzMW84emY5c29zZGEifQ._JeArQotjzyFlgHscOCDiw</string>
    <string name="enter_address">Enter address</string>
    <string name="locate">locate</string>
    <string name="tab1">Location</string>
    <string name="tab2">Steps</string>
    <string name="tab3">Correlation</string>
    <string name="pain_by_locations">Pain by Locations</string>
    <string name="today_s_goal">Today\'s Goal</string>
    <string name="sign_out">Sign out</string>
    <string name="generate_10_dummy_data">Generate 10 dummy data</string>
    <string name="welcome_to">Welcome to</string>
    <string name="no_data">--</string>
    <string name="text_degree">°</string>
    <string name="text_celcius">C</string>
    <string name="no_data_small">-</string>
    <string name="unit_wind">m/s</string>
    <string name="wind_icon"></string>
    <string name="text_wind">Wind</string>
    <string name="unit_humidity">%</string>
    <string name="humidity_icon"></string>
    <string name="text_humidity">Humidity</string>
    <string name="unit_pressure">hPa</string>
    <string name="icon_pressure"></string>
    <string name="text_pressure">Pressure</string>
    <string name="theme_icon_desc">Theme Icon</string>
    <string name="add_entry_desc">ADD ENTRY</string>
    <string name="header_pain_intensity">Pain Intensity</string>
    <string name="text_low">Low</string>
    <string name="text_high">High</string>
    <string name="header_pain_area">Pain area</string>
    <string name="text_head">head</string>
    <string name="text_neck">neck</string>
    <string name="text_back">back</string>
    <string name="text_shoulder">shoulder</string>
    <string name="text_facial">facial</string>
    <string name="text_jaw">jaw</string>
    <string name="text_shins">shins</string>
    <string name="text_elbows">elbows</string>
    <string name="text_abdomen">abdomen</string>
    <string name="text_hips">hips</string>
    <string name="text_knees">knees</string>
    <string name="text_mood">Mood</string>
    <string name="text_very_low">VERY LOW</string>
    <string name="text_average">AVERAGE</string>
    <string name="text_good">GOOD</string>
    <string name="text_very_good">VERY GOOD</string>
    <string name="header_daily_step_goal">Daily Step Goal</string>
    <string name="hint_enter_step_count">Enter Step Count</string>
    <string name="hint_goal">Goal</string>
    <string name="default_goal">10000</string>
    <string name="text_save">SAVE</string>
    <string name="text_edit">EDIT</string>
    <string name="header_pain_weather_correlation">Pain-Weather Correlation</string>
    <string name="text_select_date_range">Select date range</string>
    <string name="hint_weather_attribute">Weather attribute</string>
    <string name="text_show">Show</string>
    <string name="text_clear">Clear</string>
    <string name="text_correlation_results">Correlation Results</string>
    <string name="text_r_value">R value</string>
    <string name="text_p_value">P value</string>
    <string name="text_perform_test">Perform Test</string>
    <string name="app_name_with_space">UV Smart</string>
    <string name="back_button_desc">Back Button</string>
    <string name="temp_text_date">Entry on 5th May 2021</string>
    <string name="header_intensity">Intensity</string>
    <string name="temp_text_intensity_level">4</string>
    <string name="header_area">Area</string>
    <string name="temp_text_pain_area">neck</string>
    <string name="header_steps_goal">Steps/Goal</string>
    <string name="temp_text_steps_goal">875/10,000</string>
    <string name="header_mood">Mood</string>
    <string name="temp_text_mood">happy</string>
    <string name="header_temperature">Temperature</string>
    <string name="temp_text_temp">#° C</string>
    <string name="header_humidity">Humidity</string>
    <string name="temp_text_humidity"># %</string>
    <string name="header_pressure">Pressure</string>
    <string name="temp_text_pressure"># hPa</string>
    <string name="header_set_reminder_time">Set Reminder Time</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_set">SET</string>
    <string name="temp_text_user_name">Vivek Chaudhari</string>
    <string name="temp_text_user_email">vivek.19142@gmail.com</string>
    <string name="user_picture_view">User picture view</string>
</resources>