<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pain_record_card_view"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="10dp"
    app:strokeColor="@color/grey_300"
    app:strokeWidth="0.2dp"
    android:clickable="false"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/home_card_gradient">

        <TextView
            android:id="@+id/text_hidden_record_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_entry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/temp_text_date"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center|top"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_entry_date">

            <LinearLayout
                android:id="@+id/layout_pain_intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pain_intensity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_intensity"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/off_white" />

                <TextView
                    android:id="@+id/pain_intensity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_intensity_level"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_pain_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pain_area_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_area"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/off_white" />

                <TextView
                    android:id="@+id/pain_area_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_pain_area"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/daily_step_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_steps_goal"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/off_white" />

                <TextView
                    android:id="@+id/daily_step_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_steps_goal"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mood_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_mood"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/off_white" />

                <TextView
                    android:id="@+id/mood_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_mood"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_row_1" />

        <LinearLayout
            android:id="@+id/layout_row_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center|top"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_1">

            <LinearLayout
                android:id="@+id/layout_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temperature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_temperature"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textColor="@color/off_white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_temp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_humidity"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textColor="@color/off_white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_humidity"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/header_pressure"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textColor="@color/off_white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_text_pressure"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>