<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
    android:paddingStart="20dp"
    android:paddingEnd="0dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/circle_image_view"
        android:contentDescription="@string/user_picture_view" />

    <TextView
        android:id="@+id/nav_header_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/black"
        android:text="@string/temp_text_user_name" />

    <TextView
        android:id="@+id/nav_header_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/grey_800"
        android:text="@string/temp_text_user_email" />
</LinearLayout>